src/Lang/Parser/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.2 from .\Parser.y
-----------------------------------------------------------------------------

state 69 contains 18 shift/reduce conflicts.
state 71 contains 18 shift/reduce conflicts.
state 72 contains 18 shift/reduce conflicts.
state 73 contains 18 shift/reduce conflicts.
state 76 contains 18 shift/reduce conflicts.
state 77 contains 18 shift/reduce conflicts.
state 78 contains 18 shift/reduce conflicts.
state 79 contains 18 shift/reduce conflicts.
state 80 contains 18 shift/reduce conflicts.
state 81 contains 18 shift/reduce conflicts.
state 82 contains 18 shift/reduce conflicts.
state 83 contains 18 shift/reduce conflicts.
state 84 contains 18 shift/reduce conflicts.
state 85 contains 18 shift/reduce conflicts.
state 86 contains 18 shift/reduce conflicts.
state 87 contains 18 shift/reduce conflicts.
state 89 contains 18 shift/reduce conflicts.
state 90 contains 18 shift/reduce conflicts.
state 91 contains 18 shift/reduce conflicts.
state 92 contains 18 shift/reduce conflicts.
state 93 contains 18 shift/reduce conflicts.
state 94 contains 18 shift/reduce conflicts.
state 95 contains 18 shift/reduce conflicts.
state 96 contains 18 shift/reduce conflicts.
state 97 contains 18 shift/reduce conflicts.
state 98 contains 18 shift/reduce conflicts.
state 100 contains 18 shift/reduce conflicts.
state 101 contains 18 shift/reduce conflicts.
state 102 contains 18 shift/reduce conflicts.
state 103 contains 18 shift/reduce conflicts.
state 104 contains 18 shift/reduce conflicts.
state 105 contains 18 shift/reduce conflicts.
state 106 contains 18 shift/reduce conflicts.
state 107 contains 18 shift/reduce conflicts.
state 108 contains 18 shift/reduce conflicts.
state 109 contains 18 shift/reduce conflicts.
state 110 contains 18 shift/reduce conflicts.
state 111 contains 18 shift/reduce conflicts.
state 112 contains 18 shift/reduce conflicts.
state 113 contains 18 shift/reduce conflicts.
state 114 contains 18 shift/reduce conflicts.
state 115 contains 18 shift/reduce conflicts.
state 116 contains 18 shift/reduce conflicts.
state 117 contains 18 shift/reduce conflicts.
state 192 contains 18 shift/reduce conflicts.
state 194 contains 18 shift/reduce conflicts.
state 195 contains 18 shift/reduce conflicts.
state 196 contains 18 shift/reduce conflicts.

terminal '.' is unused
terminal ',' is unused
terminal 'then' is unused
terminal 'let' is unused
terminal 'in' is unused
terminal 'switch' is unused
terminal 'case' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> Program                            (0)
	Program -> Stmts                                   (1)
	Stmts -> Stmt ';' Stmts                            (2)
	Stmts -> Stmt ';'                                  (3)
	Stmts -> Stmt                                      (4)
	Stmt -> 'if' '(' Expr ')' Block ElseBlock          (5)
	Stmt -> 'for' '(' Stmt ';' Expr ';' Stmt ')' Block   (6)
	Stmt -> 'while' '(' Expr ')' Block                 (7)
	Stmt -> type ident '=' Expr                        (8)
	Stmt -> ident '=' Expr                             (9)
	Stmt -> ident '+=' Expr                            (10)
	Stmt -> ident '-=' Expr                            (11)
	Stmt -> ident '*=' Expr                            (12)
	Stmt -> ident '/=' Expr                            (13)
	Stmt -> ident '%=' Expr                            (14)
	Stmt -> ident '&=' Expr                            (15)
	Stmt -> ident '|=' Expr                            (16)
	Stmt -> ident '^=' Expr                            (17)
	Stmt -> ident '<<=' Expr                           (18)
	Stmt -> ident '>>=' Expr                           (19)
	Stmt -> Expr                                       (20)
	Block -> '{' Stmts '}'                             (21)
	Block -> Stmt ';'                                  (22)
	Block -> '{' '}'                                   (23)
	ElseBlock -> 'else' '{' Stmts '}'                  (24)
	ElseBlock -> 'else' Stmt                           (25)
	ElseBlock ->                                       (26)
	Expr -> Expr '||' Expr                             (27)
	Expr -> Expr '&&' Expr                             (28)
	Expr -> Expr '|' Expr                              (29)
	Expr -> Expr '^' Expr                              (30)
	Expr -> Expr '&' Expr                              (31)
	Expr -> Expr '==' Expr                             (32)
	Expr -> Expr '!=' Expr                             (33)
	Expr -> Expr '<=' Expr                             (34)
	Expr -> Expr '<' Expr                              (35)
	Expr -> Expr '>=' Expr                             (36)
	Expr -> Expr '>' Expr                              (37)
	Expr -> Expr '*' Expr                              (38)
	Expr -> Expr '/' Expr                              (39)
	Expr -> Expr '%' Expr                              (40)
	Expr -> Expr '<<' Expr                             (41)
	Expr -> Expr '>>' Expr                             (42)
	Expr -> Expr '+' Expr                              (43)
	Expr -> Expr '-' Expr                              (44)
	Expr -> 'sinh' Expr                                (45)
	Expr -> 'cosh' Expr                                (46)
	Expr -> 'tanh' Expr                                (47)
	Expr -> 'csch' Expr                                (48)
	Expr -> 'sech' Expr                                (49)
	Expr -> 'coth' Expr                                (50)
	Expr -> 'asinh' Expr                               (51)
	Expr -> 'acosh' Expr                               (52)
	Expr -> 'mean' Expr                                (53)
	Expr -> 'median' Expr                              (54)
	Expr -> 'mode' Expr                                (55)
	Expr -> 'sum' Expr                                 (56)
	Expr -> 'product' Expr                             (57)
	Expr -> 'min' Expr                                 (58)
	Expr -> 'max' Expr                                 (59)
	Expr -> 'stddev' Expr                              (60)
	Expr -> 'sqrt' Expr                                (61)
	Expr -> 'cbrt' Expr                                (62)
	Expr -> 'pow' Expr Expr                            (63)
	Expr -> 'exp' Expr                                 (64)
	Expr -> 'square' Expr                              (65)
	Expr -> 'cube' Expr                                (66)
	Expr -> 'exp10' Expr                               (67)
	Expr -> 'sin' Expr                                 (68)
	Expr -> 'cos' Expr                                 (69)
	Expr -> 'tan' Expr                                 (70)
	Expr -> 'asin' Expr                                (71)
	Expr -> 'acos' Expr                                (72)
	Expr -> 'atan' Expr                                (73)
	Expr -> 'atan2' Expr Expr                          (74)
	Expr -> 'sec' Expr                                 (75)
	Expr -> 'csc' Expr                                 (76)
	Expr -> 'cot' Expr                                 (77)
	Expr -> 'versin' Expr                              (78)
	Expr -> 'exsec' Expr                               (79)
	Expr -> 'ln' Expr                                  (80)
	Expr -> 'log10' Expr                               (81)
	Expr -> 'log2' Expr                                (82)
	Expr -> 'log' Expr                                 (83)
	Expr -> 'log1p' Expr                               (84)
	Expr -> 'fact' Expr                                (85)
	Expr -> 'fact2' Expr                               (86)
	Expr -> 'comb' Expr Expr                           (87)
	Expr -> 'perm' Expr Expr                           (88)
	Expr -> 'gcd' Expr                                 (89)
	Expr -> 'lcm' Expr                                 (90)
	Expr -> 'fib' Expr                                 (91)
	Expr -> 'gamma' Expr                               (92)
	Expr -> '(' Expr ')'                               (93)
	Expr -> '[' Expr ']'                               (94)
	Expr -> '!' Expr                                   (95)
	Expr -> '-' Expr                                   (96)
	Expr -> 'null'                                     (97)
	Expr -> int                                        (98)
	Expr -> char                                       (99)
	Expr -> bool                                       (100)
	Expr -> float                                      (101)
	Expr -> string                                     (102)
	Expr -> ident                                      (103)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'null'         { Token TokNull            _ }
	bool           { Token (TokBool $$)       _ }
	int            { Token (TokInt $$)        _ }
	float          { Token (TokFloat $$)      _ }
	char           { Token (TokChar $$)       _ }
	string         { Token (TokString $$)     _ }
	type           { Token (TokType $$)       _ }
	ident          { Token (TokIdent $$)      _ }
	'+='           { Token TokAddAssign       _ }
	'-='           { Token TokSubAssign       _ }
	'*='           { Token TokMulAssign       _ }
	'/='           { Token TokDivAssign       _ }
	'%='           { Token TokModAssign       _ }
	'&='           { Token TokBinAndAssign    _ }
	'|='           { Token TokBinOrAssign     _ }
	'^='           { Token TokBinXorAssign    _ }
	'<<='          { Token TokBinLShiftAssign _ }
	'>>='          { Token TokBinRShiftAssign _ }
	'='            { Token TokAssign          _ }
	'.'            { Token TokDot             _ }
	','            { Token TokComma           _ }
	';'            { Token TokSemiColon       _ }
	'('            { Token TokLBrack          _ }
	')'            { Token TokRBrack          _ }
	'['            { Token TokLSqBrack        _ }
	']'            { Token TokRSqBrack        _ }
	'{'            { Token TokLCBrack         _ }
	'}'            { Token TokRCBrack         _ }
	'!'            { Token TokNot             _ }
	'&&'           { Token TokAnd             _ }
	'||'           { Token TokOr              _ }
	'=='           { Token TokEq              _ }
	'!='           { Token TokNeq             _ }
	'<='           { Token TokLte             _ }
	'<'            { Token TokLt              _ }
	'>='           { Token TokGte             _ }
	'>'            { Token TokGt              _ }
	'+'            { Token TokAdd             _ }
	'-'            { Token TokSub             _ }
	'*'            { Token TokMul             _ }
	'/'            { Token TokDiv             _ }
	'%'            { Token TokMod             _ }
	'&'            { Token TokBinAnd          _ }
	'|'            { Token TokBinOr           _ }
	'^'            { Token TokBinXor          _ }
	'<<'           { Token TokBinLShift       _ }
	'>>'           { Token TokBinRShift       _ }
	'if'           { Token TokIf              _ }
	'then'         { Token TokThen            _ }
	'else'         { Token TokElse            _ }
	'let'          { Token TokLet             _ }
	'in'           { Token TokIn              _ }
	'for'          { Token TokFor             _ }
	'while'        { Token TokWhile           _ }
	'switch'       { Token TokWhile           _ }
	'case'         { Token TokWhile           _ }
	'sinh'         { Token TokSinh            _ }
	'cosh'         { Token TokCosh            _ }
	'tanh'         { Token TokTanh            _ }
	'csch'         { Token TokCsch            _ }
	'sech'         { Token TokSech            _ }
	'coth'         { Token TokCoth            _ }
	'asinh'        { Token TokAsinh           _ }
	'acosh'        { Token TokAcosh           _ }
	'mean'         { Token TokMean            _ }
	'median'       { Token TokMedian          _ }
	'mode'         { Token TokMode            _ }
	'sum'          { Token TokSum             _ }
	'product'      { Token TokProduct         _ }
	'min'          { Token TokMin             _ }
	'max'          { Token TokMax             _ }
	'stddev'       { Token TokStddev          _ }
	'sqrt'         { Token TokSqrt            _ }
	'cbrt'         { Token TokCbrt            _ }
	'pow'          { Token TokPow             _ }
	'exp'          { Token TokExp             _ }
	'square'       { Token TokSquare          _ }
	'cube'         { Token TokCube            _ }
	'exp10'        { Token TokExp10           _ }
	'sin'          { Token TokSin             _ }
	'cos'          { Token TokCos             _ }
	'tan'          { Token TokTan             _ }
	'asin'         { Token TokAsin            _ }
	'acos'         { Token TokAcos            _ }
	'atan'         { Token TokAtan            _ }
	'atan2'        { Token TokAtan2           _ }
	'sec'          { Token TokSec             _ }
	'csc'          { Token TokCsc             _ }
	'cot'          { Token TokCot             _ }
	'versin'       { Token TokVersin          _ }
	'exsec'        { Token TokExsec           _ }
	'ln'           { Token TokLn              _ }
	'log10'        { Token TokLog10           _ }
	'log2'         { Token TokLog2            _ }
	'log'          { Token TokLog             _ }
	'log1p'        { Token TokLog1p           _ }
	'fact'         { Token TokFact            _ }
	'fact2'        { Token TokFact2           _ }
	'comb'         { Token TokComb            _ }
	'perm'         { Token TokPerm            _ }
	'gcd'          { Token TokGcd             _ }
	'lcm'          { Token TokLcm             _ }
	'fib'          { Token TokFib             _ }
	'gamma'        { Token TokGamma           _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	Program         rule  1
	Stmts           rules 2, 3, 4
	Stmt            rules 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20
	Block           rules 21, 22, 23
	ElseBlock       rules 24, 25, 26
	Expr            rules 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parse -> . Program                           (rule 0)

	'null'         shift, and enter state 5
	bool           shift, and enter state 6
	int            shift, and enter state 7
	float          shift, and enter state 8
	char           shift, and enter state 9
	string         shift, and enter state 10
	type           shift, and enter state 11
	ident          shift, and enter state 12
	'('            shift, and enter state 13
	'['            shift, and enter state 14
	'!'            shift, and enter state 15
	'-'            shift, and enter state 16
	'if'           shift, and enter state 17
	'for'          shift, and enter state 18
	'while'        shift, and enter state 19
	'sinh'         shift, and enter state 20
	'cosh'         shift, and enter state 21
	'tanh'         shift, and enter state 22
	'csch'         shift, and enter state 23
	'sech'         shift, and enter state 24
	'coth'         shift, and enter state 25
	'asinh'        shift, and enter state 26
	'acosh'        shift, and enter state 27
	'mean'         shift, and enter state 28
	'median'       shift, and enter state 29
	'mode'         shift, and enter state 30
	'sum'          shift, and enter state 31
	'product'      shift, and enter state 32
	'min'          shift, and enter state 33
	'max'          shift, and enter state 34
	'stddev'       shift, and enter state 35
	'sqrt'         shift, and enter state 36
	'cbrt'         shift, and enter state 37
	'pow'          shift, and enter state 38
	'exp'          shift, and enter state 39
	'square'       shift, and enter state 40
	'cube'         shift, and enter state 41
	'exp10'        shift, and enter state 42
	'sin'          shift, and enter state 43
	'cos'          shift, and enter state 44
	'tan'          shift, and enter state 45
	'asin'         shift, and enter state 46
	'acos'         shift, and enter state 47
	'atan'         shift, and enter state 48
	'atan2'        shift, and enter state 49
	'sec'          shift, and enter state 50
	'csc'          shift, and enter state 51
	'cot'          shift, and enter state 52
	'versin'       shift, and enter state 53
	'exsec'        shift, and enter state 54
	'ln'           shift, and enter state 55
	'log10'        shift, and enter state 56
	'log2'         shift, and enter state 57
	'log'          shift, and enter state 58
	'log1p'        shift, and enter state 59
	'fact'         shift, and enter state 60
	'fact2'        shift, and enter state 61
	'comb'         shift, and enter state 62
	'perm'         shift, and enter state 63
	'gcd'          shift, and enter state 64
	'lcm'          shift, and enter state 65
	'fib'          shift, and enter state 66
	'gamma'        shift, and enter state 67

	Program        goto state 68
	Stmts          goto state 2
	Stmt           goto state 3
	Expr           goto state 4

State 1

	Program -> . Stmts                                  (rule 1)

	'null'         shift, and enter state 5
	bool           shift, and enter state 6
	int            shift, and enter state 7
	float          shift, and enter state 8
	char           shift, and enter state 9
	string         shift, and enter state 10
	type           shift, and enter state 11
	ident          shift, and enter state 12
	'('            shift, and enter state 13
	'['            shift, and enter state 14
	'!'            shift, and enter state 15
	'-'            shift, and enter state 16
	'if'           shift, and enter state 17
	'for'          shift, and enter state 18
	'while'        shift, and enter state 19
	'sinh'         shift, and enter state 20
	'cosh'         shift, and enter state 21
	'tanh'         shift, and enter state 22
	'csch'         shift, and enter state 23
	'sech'         shift, and enter state 24
	'coth'         shift, and enter state 25
	'asinh'        shift, and enter state 26
	'acosh'        shift, and enter state 27
	'mean'         shift, and enter state 28
	'median'       shift, and enter state 29
	'mode'         shift, and enter state 30
	'sum'          shift, and enter state 31
	'product'      shift, and enter state 32
	'min'          shift, and enter state 33
	'max'          shift, and enter state 34
	'stddev'       shift, and enter state 35
	'sqrt'         shift, and enter state 36
	'cbrt'         shift, and enter state 37
	'pow'          shift, and enter state 38
	'exp'          shift, and enter state 39
	'square'       shift, and enter state 40
	'cube'         shift, and enter state 41
	'exp10'        shift, and enter state 42
	'sin'          shift, and enter state 43
	'cos'          shift, and enter state 44
	'tan'          shift, and enter state 45
	'asin'         shift, and enter state 46
	'acos'         shift, and enter state 47
	'atan'         shift, and enter state 48
	'atan2'        shift, and enter state 49
	'sec'          shift, and enter state 50
	'csc'          shift, and enter state 51
	'cot'          shift, and enter state 52
	'versin'       shift, and enter state 53
	'exsec'        shift, and enter state 54
	'ln'           shift, and enter state 55
	'log10'        shift, and enter state 56
	'log2'         shift, and enter state 57
	'log'          shift, and enter state 58
	'log1p'        shift, and enter state 59
	'fact'         shift, and enter state 60
	'fact2'        shift, and enter state 61
	'comb'         shift, and enter state 62
	'perm'         shift, and enter state 63
	'gcd'          shift, and enter state 64
	'lcm'          shift, and enter state 65
	'fib'          shift, and enter state 66
	'gamma'        shift, and enter state 67

	Stmts          goto state 2
	Stmt           goto state 3
	Expr           goto state 4

State 2

	Program -> Stmts .                                  (rule 1)

	%eof           reduce using rule 1


State 3

	Stmts -> Stmt . ';' Stmts                           (rule 2)
	Stmts -> Stmt . ';'                                 (rule 3)
	Stmts -> Stmt .                                     (rule 4)

	';'            shift, and enter state 155
	'}'            reduce using rule 4
	%eof           reduce using rule 4


State 4

	Stmt -> Expr .                                      (rule 20)
	Expr -> Expr . '||' Expr                            (rule 27)
	Expr -> Expr . '&&' Expr                            (rule 28)
	Expr -> Expr . '|' Expr                             (rule 29)
	Expr -> Expr . '^' Expr                             (rule 30)
	Expr -> Expr . '&' Expr                             (rule 31)
	Expr -> Expr . '==' Expr                            (rule 32)
	Expr -> Expr . '!=' Expr                            (rule 33)
	Expr -> Expr . '<=' Expr                            (rule 34)
	Expr -> Expr . '<' Expr                             (rule 35)
	Expr -> Expr . '>=' Expr                            (rule 36)
	Expr -> Expr . '>' Expr                             (rule 37)
	Expr -> Expr . '*' Expr                             (rule 38)
	Expr -> Expr . '/' Expr                             (rule 39)
	Expr -> Expr . '%' Expr                             (rule 40)
	Expr -> Expr . '<<' Expr                            (rule 41)
	Expr -> Expr . '>>' Expr                            (rule 42)
	Expr -> Expr . '+' Expr                             (rule 43)
	Expr -> Expr . '-' Expr                             (rule 44)

	';'            reduce using rule 20
	')'            reduce using rule 20
	'}'            reduce using rule 20
	'&&'           shift, and enter state 137
	'||'           shift, and enter state 138
	'=='           shift, and enter state 139
	'!='           shift, and enter state 140
	'<='           shift, and enter state 141
	'<'            shift, and enter state 142
	'>='           shift, and enter state 143
	'>'            shift, and enter state 144
	'+'            shift, and enter state 145
	'-'            shift, and enter state 146
	'*'            shift, and enter state 147
	'/'            shift, and enter state 148
	'%'            shift, and enter state 149
	'&'            shift, and enter state 150
	'|'            shift, and enter state 151
	'^'            shift, and enter state 152
	'<<'           shift, and enter state 153
	'>>'           shift, and enter state 154
	%eof           reduce using rule 20


State 5

	Expr -> 'null' .                                    (rule 97)

	'null'         reduce using rule 97
	bool           reduce using rule 97
	int            reduce using rule 97
	float          reduce using rule 97
	char           reduce using rule 97
	string         reduce using rule 97
	ident          reduce using rule 97
	';'            reduce using rule 97
	'('            reduce using rule 97
	')'            reduce using rule 97
	'['            reduce using rule 97
	']'            reduce using rule 97
	'}'            reduce using rule 97
	'!'            reduce using rule 97
	'&&'           reduce using rule 97
	'||'           reduce using rule 97
	'=='           reduce using rule 97
	'!='           reduce using rule 97
	'<='           reduce using rule 97
	'<'            reduce using rule 97
	'>='           reduce using rule 97
	'>'            reduce using rule 97
	'+'            reduce using rule 97
	'-'            reduce using rule 97
	'*'            reduce using rule 97
	'/'            reduce using rule 97
	'%'            reduce using rule 97
	'&'            reduce using rule 97
	'|'            reduce using rule 97
	'^'            reduce using rule 97
	'<<'           reduce using rule 97
	'>>'           reduce using rule 97
	'sinh'         reduce using rule 97
	'cosh'         reduce using rule 97
	'tanh'         reduce using rule 97
	'csch'         reduce using rule 97
	'sech'         reduce using rule 97
	'coth'         reduce using rule 97
	'asinh'        reduce using rule 97
	'acosh'        reduce using rule 97
	'mean'         reduce using rule 97
	'median'       reduce using rule 97
	'mode'         reduce using rule 97
	'sum'          reduce using rule 97
	'product'      reduce using rule 97
	'min'          reduce using rule 97
	'max'          reduce using rule 97
	'stddev'       reduce using rule 97
	'sqrt'         reduce using rule 97
	'cbrt'         reduce using rule 97
	'pow'          reduce using rule 97
	'exp'          reduce using rule 97
	'square'       reduce using rule 97
	'cube'         reduce using rule 97
	'exp10'        reduce using rule 97
	'sin'          reduce using rule 97
	'cos'          reduce using rule 97
	'tan'          reduce using rule 97
	'asin'         reduce using rule 97
	'acos'         reduce using rule 97
	'atan'         reduce using rule 97
	'atan2'        reduce using rule 97
	'sec'          reduce using rule 97
	'csc'          reduce using rule 97
	'cot'          reduce using rule 97
	'versin'       reduce using rule 97
	'exsec'        reduce using rule 97
	'ln'           reduce using rule 97
	'log10'        reduce using rule 97
	'log2'         reduce using rule 97
	'log'          reduce using rule 97
	'log1p'        reduce using rule 97
	'fact'         reduce using rule 97
	'fact2'        reduce using rule 97
	'comb'         reduce using rule 97
	'perm'         reduce using rule 97
	'gcd'          reduce using rule 97
	'lcm'          reduce using rule 97
	'fib'          reduce using rule 97
	'gamma'        reduce using rule 97
	%eof           reduce using rule 97


State 6

	Expr -> bool .                                      (rule 100)

	'null'         reduce using rule 100
	bool           reduce using rule 100
	int            reduce using rule 100
	float          reduce using rule 100
	char           reduce using rule 100
	string         reduce using rule 100
	ident          reduce using rule 100
	';'            reduce using rule 100
	'('            reduce using rule 100
	')'            reduce using rule 100
	'['            reduce using rule 100
	']'            reduce using rule 100
	'}'            reduce using rule 100
	'!'            reduce using rule 100
	'&&'           reduce using rule 100
	'||'           reduce using rule 100
	'=='           reduce using rule 100
	'!='           reduce using rule 100
	'<='           reduce using rule 100
	'<'            reduce using rule 100
	'>='           reduce using rule 100
	'>'            reduce using rule 100
	'+'            reduce using rule 100
	'-'            reduce using rule 100
	'*'            reduce using rule 100
	'/'            reduce using rule 100
	'%'            reduce using rule 100
	'&'            reduce using rule 100
	'|'            reduce using rule 100
	'^'            reduce using rule 100
	'<<'           reduce using rule 100
	'>>'           reduce using rule 100
	'sinh'         reduce using rule 100
	'cosh'         reduce using rule 100
	'tanh'         reduce using rule 100
	'csch'         reduce using rule 100
	'sech'         reduce using rule 100
	'coth'         reduce using rule 100
	'asinh'        reduce using rule 100
	'acosh'        reduce using rule 100
	'mean'         reduce using rule 100
	'median'       reduce using rule 100
	'mode'         reduce using rule 100
	'sum'          reduce using rule 100
	'product'      reduce using rule 100
	'min'          reduce using rule 100
	'max'          reduce using rule 100
	'stddev'       reduce using rule 100
	'sqrt'         reduce using rule 100
	'cbrt'         reduce using rule 100
	'pow'          reduce using rule 100
	'exp'          reduce using rule 100
	'square'       reduce using rule 100
	'cube'         reduce using rule 100
	'exp10'        reduce using rule 100
	'sin'          reduce using rule 100
	'cos'          reduce using rule 100
	'tan'          reduce using rule 100
	'asin'         reduce using rule 100
	'acos'         reduce using rule 100
	'atan'         reduce using rule 100
	'atan2'        reduce using rule 100
	'sec'          reduce using rule 100
	'csc'          reduce using rule 100
	'cot'          reduce using rule 100
	'versin'       reduce using rule 100
	'exsec'        reduce using rule 100
	'ln'           reduce using rule 100
	'log10'        reduce using rule 100
	'log2'         reduce using rule 100
	'log'          reduce using rule 100
	'log1p'        reduce using rule 100
	'fact'         reduce using rule 100
	'fact2'        reduce using rule 100
	'comb'         reduce using rule 100
	'perm'         reduce using rule 100
	'gcd'          reduce using rule 100
	'lcm'          reduce using rule 100
	'fib'          reduce using rule 100
	'gamma'        reduce using rule 100
	%eof           reduce using rule 100


State 7

	Expr -> int .                                       (rule 98)

	'null'         reduce using rule 98
	bool           reduce using rule 98
	int            reduce using rule 98
	float          reduce using rule 98
	char           reduce using rule 98
	string         reduce using rule 98
	ident          reduce using rule 98
	';'            reduce using rule 98
	'('            reduce using rule 98
	')'            reduce using rule 98
	'['            reduce using rule 98
	']'            reduce using rule 98
	'}'            reduce using rule 98
	'!'            reduce using rule 98
	'&&'           reduce using rule 98
	'||'           reduce using rule 98
	'=='           reduce using rule 98
	'!='           reduce using rule 98
	'<='           reduce using rule 98
	'<'            reduce using rule 98
	'>='           reduce using rule 98
	'>'            reduce using rule 98
	'+'            reduce using rule 98
	'-'            reduce using rule 98
	'*'            reduce using rule 98
	'/'            reduce using rule 98
	'%'            reduce using rule 98
	'&'            reduce using rule 98
	'|'            reduce using rule 98
	'^'            reduce using rule 98
	'<<'           reduce using rule 98
	'>>'           reduce using rule 98
	'sinh'         reduce using rule 98
	'cosh'         reduce using rule 98
	'tanh'         reduce using rule 98
	'csch'         reduce using rule 98
	'sech'         reduce using rule 98
	'coth'         reduce using rule 98
	'asinh'        reduce using rule 98
	'acosh'        reduce using rule 98
	'mean'         reduce using rule 98
	'median'       reduce using rule 98
	'mode'         reduce using rule 98
	'sum'          reduce using rule 98
	'product'      reduce using rule 98
	'min'          reduce using rule 98
	'max'          reduce using rule 98
	'stddev'       reduce using rule 98
	'sqrt'         reduce using rule 98
	'cbrt'         reduce using rule 98
	'pow'          reduce using rule 98
	'exp'          reduce using rule 98
	'square'       reduce using rule 98
	'cube'         reduce using rule 98
	'exp10'        reduce using rule 98
	'sin'          reduce using rule 98
	'cos'          reduce using rule 98
	'tan'          reduce using rule 98
	'asin'         reduce using rule 98
	'acos'         reduce using rule 98
	'atan'         reduce using rule 98
	'atan2'        reduce using rule 98
	'sec'          reduce using rule 98
	'csc'          reduce using rule 98
	'cot'          reduce using rule 98
	'versin'       reduce using rule 98
	'exsec'        reduce using rule 98
	'ln'           reduce using rule 98
	'log10'        reduce using rule 98
	'log2'         reduce using rule 98
	'log'          reduce using rule 98
	'log1p'        reduce using rule 98
	'fact'         reduce using rule 98
	'fact2'        reduce using rule 98
	'comb'         reduce using rule 98
	'perm'         reduce using rule 98
	'gcd'          reduce using rule 98
	'lcm'          reduce using rule 98
	'fib'          reduce using rule 98
	'gamma'        reduce using rule 98
	%eof           reduce using rule 98


State 8

	Expr -> float .                                     (rule 101)

	'null'         reduce using rule 101
	bool           reduce using rule 101
	int            reduce using rule 101
	float          reduce using rule 101
	char           reduce using rule 101
	string         reduce using rule 101
	ident          reduce using rule 101
	';'            reduce using rule 101
	'('            reduce using rule 101
	')'            reduce using rule 101
	'['            reduce using rule 101
	']'            reduce using rule 101
	'}'            reduce using rule 101
	'!'            reduce using rule 101
	'&&'           reduce using rule 101
	'||'           reduce using rule 101
	'=='           reduce using rule 101
	'!='           reduce using rule 101
	'<='           reduce using rule 101
	'<'            reduce using rule 101
	'>='           reduce using rule 101
	'>'            reduce using rule 101
	'+'            reduce using rule 101
	'-'            reduce using rule 101
	'*'            reduce using rule 101
	'/'            reduce using rule 101
	'%'            reduce using rule 101
	'&'            reduce using rule 101
	'|'            reduce using rule 101
	'^'            reduce using rule 101
	'<<'           reduce using rule 101
	'>>'           reduce using rule 101
	'sinh'         reduce using rule 101
	'cosh'         reduce using rule 101
	'tanh'         reduce using rule 101
	'csch'         reduce using rule 101
	'sech'         reduce using rule 101
	'coth'         reduce using rule 101
	'asinh'        reduce using rule 101
	'acosh'        reduce using rule 101
	'mean'         reduce using rule 101
	'median'       reduce using rule 101
	'mode'         reduce using rule 101
	'sum'          reduce using rule 101
	'product'      reduce using rule 101
	'min'          reduce using rule 101
	'max'          reduce using rule 101
	'stddev'       reduce using rule 101
	'sqrt'         reduce using rule 101
	'cbrt'         reduce using rule 101
	'pow'          reduce using rule 101
	'exp'          reduce using rule 101
	'square'       reduce using rule 101
	'cube'         reduce using rule 101
	'exp10'        reduce using rule 101
	'sin'          reduce using rule 101
	'cos'          reduce using rule 101
	'tan'          reduce using rule 101
	'asin'         reduce using rule 101
	'acos'         reduce using rule 101
	'atan'         reduce using rule 101
	'atan2'        reduce using rule 101
	'sec'          reduce using rule 101
	'csc'          reduce using rule 101
	'cot'          reduce using rule 101
	'versin'       reduce using rule 101
	'exsec'        reduce using rule 101
	'ln'           reduce using rule 101
	'log10'        reduce using rule 101
	'log2'         reduce using rule 101
	'log'          reduce using rule 101
	'log1p'        reduce using rule 101
	'fact'         reduce using rule 101
	'fact2'        reduce using rule 101
	'comb'         reduce using rule 101
	'perm'         reduce using rule 101
	'gcd'          reduce using rule 101
	'lcm'          reduce using rule 101
	'fib'          reduce using rule 101
	'gamma'        reduce using rule 101
	%eof           reduce using rule 101


State 9

	Expr -> char .                                      (rule 99)
